# Catch2Template

./: .clang-format  .gitmodules  CMakeLists.txt  Factorial.cpp  Fibonacci.cpp  LICENSE  main.cpp
.github/workflows/: cmake.yml  ubuntu-benchmark.yml  ubuntu-nobenchmark.yml
